--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.4",
     "react-scripts": "5.0.1",
     "styled": "^1.0.0",
     "styled-components": "^6.1.19",
